--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
     <thead>
         <th>Title:</th>
         <th>Description:</th>
-        <th>Actions:</th>
+        <th colspan="3">Actions:</th>
     </thead>
     
     <tbody>
@@ -11,8 +11,12 @@
         <tr>
             <td><%= article.title %></td>
             <td><%= article.description %></td>
-            <td>placeholder</td>
+            <td><%= link_to 'Show', article_path(article) %></td>
+            <td><%= link_to 'Edit', edit_article_path(article) %></td>
+            <td><%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
         </tr>
         <% end %>
     </tbody>
 </table>
+<br>
+<link><%= link_to 'Create new article', new_article_path %></link>
