--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,1 @@
-<a href="http://localhost:3000/about">About us</a>
-<a href="http://localhost:3000/services">Services</a>
+<h1>This is the homepage</h1>
