--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,28 @@
-<h1>Articles Listing Page</h1>
-<table>
-    <thead>
-        <th>Title:</th>
-        <th>Description:</th>
-        <th colspan="3">Actions:</th>
-    </thead>
-    
-    <tbody>
+<h1 class="text-center mt-4">Listing all articles</h1>
+<div class="container">
     <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= link_to 'Show', article_path(article) %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
+        <div class="row justify-content-md-center">
+            <div class="col-8 mt-4">
+                <div class="card text-center shadow mb-5 bg-white rounded">
+                    <div class="card-header font-italic">
+                    By Evelyn Frech
+                    </div>
+                    <div class="card-body">
+                    <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-sucess"  %></h5>
+                    <p class="card-text"><%= truncate(article.description, length: 50) %></p>
+                    <%= link_to 'View', article_path(article), class: "btn btn-warning" %>
+                    <%= link_to 'Edit', edit_article_path(article), class: "btn btn-success" %>
+                    <%= link_to 'Delete', article_path(article), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+                    </div>
+                    <div class="card-footer text-muted">
+                    <small>Created <%= time_ago_in_words(article.created_at) %> ago,
+                    edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    <% end %>
+</div>
+
 <br>
 <link><%= link_to 'Create new article', new_article_path %></link>
